[package]
repository = "https://github.com/SuperInstance/lever-runner-wasm"
name = "lever-runner-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly build of lever-runner carapace for browser deployment"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake2 = "0.10"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"        # Optimize for size
lto = true
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
